load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-load
  namespace: kubeproject
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
